<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">User List</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="userHasBeenDeletedSuccessfully">User has been deleted successfully</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="doYouWantToDeleteThisUser">Are you sure you want to remove this user?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>

    <string name="user_name_could_not_be_empty">User name could not be empty</string>
    <string name="username_length_check">User name should be at least 5 character</string>

    <string name="email_could_not_be_empty">Email could not be empty</string>
    <string name="incorrect_email_address">Please add correct email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="active">Active</string>
    <string name="inActive">InActive</string>
    <string name="creatingANewUser">Creating a new user</string>
    <string name="deleteUser">Delete user</string>
    <string name="userHasBeenCreatedSuccessfully">User has been created successfully</string>
    <string name="unexpectedErrorHappened">Unexpected error happened</string>
    <string name="unAuthorized">Unauthorized</string>
    <string name="checkYourInternetConnection">Check your internet connection</string>
    <string name="dataIssue">Data issue</string>

</resources>